--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ pylint = "*"
 [packages]
 django = "*"
 pylint-django = "*"
+django-image-cropping = "*"
+easy-thumbnails = "*"
 
 [requires]
 python_version = "3.7"
