--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django = "*"
 pylint-django = "*"
 django-image-cropping = "*"
 easy-thumbnails = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.7"
