--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pylint = "*"
 django = "*"
 pylint-django = "*"
 django-crispy-forms = "*"
+django-image-cropping = "*"
 
 [requires]
 python_version = "3.7"
