--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pillow = "*"
 pylint = "*"
 django-imagekit = "*"
 python-decouple = "*"
+django-s3-storage = "*"
 
 [requires]
 python_version = "3.9"
