--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pylint = "*"
 django-imagekit = "*"
 python-decouple = "*"
 django-s3-storage = "*"
+boto3 = "*"
 
 [requires]
 python_version = "3.9"
